tdf#154371 writerfilter outineNumbering: copy inherited listId

LO has a unique heading numbering/chapter numbering/outline numbering
that has no counterpart in DOCX world.
One big gotcha is that styles do not inherit numbering that is
defined by the chapter numbering. So any DOCX paragraph styles
that inherit outlineLvl, listLvl, listId from a style that
is assigned to chapter numbering needs to explicitly assign the value.

One thing I am puzzled about is how the listLvl is being set.
(Perhaps that is one setting that Chapter Numbering allows to inherit?
But really hard to test because changing ANYTHING triggers all the code
that ensures that no inheritance occurs/resets listLvl.)

make CppunitTest_sw_ooxmlexport4 CPPUNIT_TEST_NAME=test_ClosingBrace

Change-Id: Ia744b076a86291b06af474934b2f4f705744b8b9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152515
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>